# codegaurd-ai

./: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yaml  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build-deploy.yaml  cicd.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/endpoints/: analyses.py  analyze.py  progress.py  upload.py
backend/app/core/: config.py  database.py  dependencies.py  logging.py
backend/app/models/: __init__.py  analysis.py  base.py  rag_document.py
backend/app/schemas/: __init__.py  analysis.py  upload.py
backend/app/services/: __init__.py  pipeline.py  seed_rag.py
backend/app/services/agents/: __init__.py  classifier_agent.py  issue_detector_agent.py  llm_client.py  rag_service.py  roadmap_generator_agent.py  test_generator_agent.py  validation_agent.py
backend/app/services/tools/: __init__.py  ast_parser.py  bandit_scanner.py  radon_analyzer.py  ruff_linter.py  tool_orchestrator.py
backend/app/utils/: __init__.py  guardrails.py  zip_handler.py
backend/rag_corpus/: async_practices.md  complexity_guidelines.md  error_handling.md  pep8_style.md  performance_practices.md  security_practices.md  solid_principles.md  testing_practices.md
backend/tests/: conftest.py  test_api.py  test_ast_parser.py  test_guardrails.py  test_schemas.py
backend/tests/fixtures/sample-project/: app.py  config.py  models.py  utils.py
frontend/: .dockerignore  .env.example  Dockerfile  env.sh  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/constants/: index.ts
frontend/src/lib/: api.ts  types.ts  utils.ts
frontend/src/pages/: DashboardPage.tsx  (+2 more)
(+6 files in other folders)
