[project]
name = "backend"
version = "0.1.0"
description = "CodeGuard AI — Autonomous Code Review & Refactor Planner"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Web framework
    "fastapi>=0.134.0",
    "uvicorn[standard]>=0.41.0",
    "python-multipart>=0.0.22",

    # Database
    "sqlalchemy>=2.0.47",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.3",
    "pgvector==0.2.5",
    "alembic>=1.16.0",

    # LLM & Agents
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-postgres>=0.0.17",
    "langgraph>=0.4.1",
    "google-generativeai>=0.8.6",

    # Configuration & Validation
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",

    # Static Analysis Tools
    "radon>=6.0.1",
    "ruff>=0.11.0",
    "bandit>=1.8.0",

    # Caching & Job Queue
    "redis>=5.0.0",

    # Logging & Reliability
    "structlog>=25.1.0",
    "tenacity>=9.0.0",

    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]
